--- a/proposta_app/src/main/resources/application.properties
+++ b/proposta_app/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=proposta-web
 spring.datasource.url=jdbc:postgresql://localhost:5432/propostadb
 spring.datasource.password=18273645
 spring.datasource.username=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
