--- a/proposta_app/src/main/resources/application.properties
+++ b/proposta_app/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.port=5673
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.amqp.rabbit=DEBUG
