--- a/proposta_app/src/main/resources/application.properties
+++ b/proposta_app/src/main/resources/application.properties
@@ -4,9 +4,12 @@ spring.datasource.password=18273645
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework.amqp.rabbit=DEBUG
+
+rabbitmq.propostapendente.exchange=proposta-pendente.ex
