--- a/notificacao/src/main/resources/application.properties
+++ b/notificacao/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+rabbitmq.queue.proposta.pendente=proposta-pendente.ms-notificacao
+
+aws.accessKey=${ACCESS_KEY}
+aws.secretKey=${SECRET_KEY}
